--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>spring-ioc-xml-practice-02</module>
         <module>spring-ioc-annotation-03</module>
         <module>spring-ioc-annotation-practice-05</module>
+        <module>spring-java-practice-07</module>
     </modules>
 
     <properties>
